{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "LevelControl",
            "id": "a994ffd9-e913-4a3e-a5c1-89ac13542183",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "6bba2a53-de9a-4a70-9d81-1d1c4509a664",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "ClickPosition",
                    "type": "Value",
                    "id": "c2af3058-7b3d-409e-b546-48d379f9021f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "90866db4-4546-4eab-a46f-1e850c17f3f3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2729be53-e04f-41dd-9b3c-787f227ec260",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": []
        }
    ]
}